# bevy_2d_inverse_kinematics

./: .gitignore  Cargo.toml  README.md  release-wasm
.github/workflows/: deploy.yml
assets/: char.gltf  character.gltf  frog.glb  frog.gltf  model.gltf
examples/arm/: arm.rs  main.rs
examples/frog/: frog.rs  main.rs
examples/model/: main.rs  model.rs
misc/: BASEmodel.blend  BASEmodel.blend1  character.blend  character.blend1  frog.blend  frog.blend1
src/: arm.rs  frog.rs  ik.rs  lib.rs  main.rs
web/: index.html
