[package]
name = "fabrik"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = { version = "0.15.0" }

[dev-dependencies]
bevy_egui = "0.33"
bevy-inspector-egui = { version = "0.30.0", default-features = true }
