[package]
name = "bevy_2d_inverse_kinematics"
version = "0.1.0"
edition = "2021"
description = "A 2D inverse kinematics plugin for Bevy"
repository = "https://github.com/ntibi/FABRIK"
readme = "README.md"
license-file = "LICENSE"
keywords = ["bevy", "fabrik", "2d", "inverse-kinematics", "animation"]
categories = ["game-development", "simulation", "games"]
exclude = ["assets/", "misc/", ".github/"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = { version = "0.15.0" }

[dev-dependencies]
bevy_egui = "0.33"
bevy-inspector-egui = { version = "0.30.0", default-features = true }
